--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -1,8 +1,8 @@
 <ion-side-menus enable-menu-with-back-views="false">
   <ion-side-menu-content drag-content="false">
-    <ion-nav-bar class="bar-stable">
+    <ion-nav-bar class="bar-stable" align-title="center">
       <ion-nav-back-button class="button-clear">
-        <i class="ion-arrow-left-c"></i> ddd
+        <i class="ion-arrow-left-c"></i> left
       </ion-nav-back-button>
 
       <ion-nav-buttons side="left">
