--- a/scss/global/_mixins.scss
+++ b/scss/global/_mixins.scss
@@ -33,6 +33,12 @@
   }
 }
 
+@mixin iphone4-and-lower {
+  @media only screen and (max-width: 320px) and (max-height: 480px){
+    @content;
+  }
+}
+
 @mixin iphone6-and-lower {
   @media only screen and (max-width: 375px){
     @content;
