--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -6,29 +6,19 @@
       </ion-nav-back-button>
 
       <ion-nav-buttons side="left">
-        <button class="button button-icon button-clear ion-navicon" menu-toggle="left">
-        </button>
+        <!--<button class="button button-icon button-clear ion-navicon" menu-toggle="left"></button>-->
       </ion-nav-buttons>
     </ion-nav-bar>
     <ion-nav-view name="menuContent"></ion-nav-view>
   </ion-side-menu-content>
 
-  <ion-side-menu side="left">
-    <ion-content>
-      <ion-list>
-        <ion-item nav-clear menu-close href="" ng-click="login()">
-          Login
-        </ion-item>
-        <ion-item nav-clear menu-close href="#/app/search">
-          Search
-        </ion-item>
-        <ion-item nav-clear menu-close href="#/app/browse">
-          Browse
-        </ion-item>
-        <ion-item nav-clear menu-close href="#/app/playlists">
-          Playlists
-        </ion-item>
-      </ion-list>
-    </ion-content>
-  </ion-side-menu>
+  <!--<ion-side-menu side="left">
+      <ion-content>
+        <ion-list>
+          <ion-item nav-clear menu-close href="#/categories">
+            Categories
+          </ion-item>
+        </ion-list>
+      </ion-content>
+    </ion-side-menu>-->
 </ion-side-menus>
