--- a/scss/pages/_cards.scss
+++ b/scss/pages/_cards.scss
@@ -49,12 +49,6 @@
       height: 100%;
     }
 
-    .fade {
-      -webkit-transition: 0.2s opacity linear;
-      transition: 0.2s opacity linear;
-      opacity: 0;
-    }
-
     td-card {
       position: absolute;
       left: 50%;
@@ -66,16 +60,16 @@
       box-shadow: 0 -3px 3px 0 rgba(0, 0, 0, 0.32);
     }
 
-    td-card.card-3 {
+    td-card.card-2 {
       margin-left: -48.6%;
       width: 97%;
       margin-top: 16px;
 
-      -webkit-transition: margin 0.1s, width 0.1s;
-      transition: margin 0.1s, width 0.1s;
+/*      -webkit-transition: margin 0.1s, width 0.1s;
+      transition: margin 0.1s, width 0.1s;*/
     }
 
-    td-card.card-2 {
+    td-card.card-1 {
       margin-left: -46.2%;
       width: 92.2%;
       margin-top: 9px;
@@ -83,18 +77,10 @@
       /*display: none;*/
     }
 
-    td-card.card-1 {
+    td-card.card-0 {
       margin-left: -43.6%;
       width: 87%;
       margin-top: 3px;
-      box-shadow: none;
-      /*display: none;*/
-    }
-
-    td-card.card-0 {
-      margin-left: -37.2%;
-      width: 74.5%;
-      margin-top: 0px;
       box-shadow: none;
       /*display: none;*/
     }
@@ -109,7 +95,7 @@
       font-weight: 400;
       bottom: 21px;
       right: 10px;
-      color: #ffffff;
+      color: #ccc;
     }
 
     td-card .info {
@@ -119,18 +105,18 @@
       width: 100%;
     }
 
-    td-card.card-3 .info,
-    td-card.card-3 .comment,
-    td-card.card-3 .gradient {
+    /*td-card.card-2 .info,
+    td-card.card-2 .comment,
+    td-card.card-2 .gradient {
       -webkit-transition: 0.1s opacity linear;
       transition: 0.1s opacity linear;
       opacity: 1;
-    }
+    }*/
 
     td-card .info,
     td-card .comment,
     td-card .gradient {
-      opacity: 0;
+      opacity: 1;
     }
 
     td-card .info .avatar {
@@ -172,9 +158,14 @@
       float: right;
       border-radius: 25px;
       color: #ffffff;
-      padding: 10px 15px;
+      padding: 9px 15px;
       height: auto;
       line-height: 1;
+      letter-spacing: 0px;
+      &.followed{
+        background-color: #fff;
+        color: #000;
+      }
     }
 
     td-card .info .follow-button:active {
@@ -203,10 +194,13 @@
     td-card .gradient-top {
       top: 0;
 
-      background: -webkit-linear-gradient(top, rgba(162, 106, 222, 1), rgba(162, 106, 222, 0));
-      background: -o-linear-gradient(bottom, rgba(162, 106, 222, 1), rgba(162, 106, 222, 0));
-      background: -moz-linear-gradient(bottom, rgba(162, 106, 222, 1), rgba(162, 106, 222, 0));
-      background: linear-gradient(to bottom, rgba(162, 106, 222, 1), rgba(162, 106, 222, 0));
+      @include vertical-gradient($category-gradient-grey-end, $category-gradient-grey-start);
+      &.pink{
+        @include vertical-gradient($category-gradient-pink-end, $category-gradient-pink-start);
+      }
+      &.blue{
+        @include vertical-gradient($category-gradient-blue-end, $category-gradient-blue-start);
+      }
     }
 
     td-card .gradient-bottom {
