--- a/www/templates/cards.html
+++ b/www/templates/cards.html
@@ -14,7 +14,7 @@
         >
         <div class="image">
           <div class="img" style="background-image: url({{card.image}})"></div>
-          <div class="gradient gradient-top"></div>
+          <div class="gradient gradient-top {{card.color}}"></div>
           <div class="gradient gradient-bottom"></div>
 
           <div class="no-text">YAAY <div class="right-arrow"></div></div>
@@ -29,7 +29,7 @@
                 <span>{{card.followers}} Follower</span>
               </div>
             </div>
-            <div class="button follow-button">Follow</div>
+            <button class="button follow-button" ng-click="toggleFollow(card)" ng-class="{followed:card.followed}">{{card.followed?'Unfollow':'Follow'}}</button>
           </div>
 
           <div class="comment">
@@ -55,13 +55,13 @@
       <input type="file" id="profile_photo_r" onchange="onCardPhotoSelected(this)" accept="image/*" ng-if="!uploadDisabled">
       <i class="icon ion-ios-camera-outline"></i>
     </button>
-    <div class="buttons pull-right social" ng-click="doSomething()">
-      <div class="circle whatsapp">
-        <div class="icon ion-social-whatsapp-outline"></div>
-      </div>
-      <div class="circle facebook">
-        <div class="icon ion-social-facebook"></div>
-      </div>
+    <div class="buttons pull-right social">
+      <a class="circle whatsapp">
+        <i class="icon ion-social-whatsapp-outline"></i>
+      </a>
+      <a class="circle facebook">
+        <i class="icon ion-social-facebook"></i>
+      </a>
     </div>
   </ion-footer-bar>
 </ion-view>
