change form skins

--- a/www/templates/complete-profile.html
+++ b/www/templates/complete-profile.html
@@ -16,7 +16,7 @@
         <label>Add Photo</label>
       </div>
       
-      <div class="list list-inset">
+      <div class="list list-inset form-skin1">
         <label class="item item-input">
           <input type="text" placeholder="Name" ng-model="data.name">
           <i class="icon ion-ios-checkmark-empty checkmark" ng-show="data.name"></i>
