--- a/www/templates/forgot-password-code.html
+++ b/www/templates/forgot-password-code.html
@@ -10,7 +10,7 @@
     </div>
     
     <form>
-      <div class="list list-inset">
+      <div class="list list-inset form-skin1">
         <label class="item item-input">
           <input type="text" placeholder="Code we sent by e-mail">
         </label>
