--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -9,7 +9,7 @@
     </div>
     
     <form>
-      <div class="list list-inset">
+      <div class="list list-inset form-skin1">
         <label class="item item-input with-placeholder-icon">
           <i class="icon ion-ios-email-outline placeholder-icon"></i>
           <input type="text" placeholder="Email Address">
