fixes in first milestone

--- a/scss/pages/_cards.scss
+++ b/scss/pages/_cards.scss
@@ -65,8 +65,8 @@
       width: 97%;
       margin-top: 16px;
 
-/*      -webkit-transition: margin 0.1s, width 0.1s;
-      transition: margin 0.1s, width 0.1s;*/
+      /*      -webkit-transition: margin 0.1s, width 0.1s;
+            transition: margin 0.1s, width 0.1s;*/
     }
 
     td-card.card-1 {
@@ -96,12 +96,13 @@
       bottom: 21px;
       right: 10px;
       color: #ccc;
+      white-space: nowrap;
     }
 
     td-card .info {
       position: absolute;
       top: 0;
-      padding: 12px 7px 0 17px;
+      padding: 12px 7px 0 10px;
       width: 100%;
     }
 
@@ -141,8 +142,9 @@
     }
 
     td-card .info .user-info .counters {
-      font-size: 0.7em;
+      font-size: 0.68em;
       padding-top: 0.15em;
+      white-space: nowrap;
     }
 
     .counters .space-right {
@@ -234,45 +236,44 @@
       font-weight: 600;
       opacity: 0;
       background: rgba(255, 255, 255, 0.5);
-    }
-
-    .no-text {
-      top: 22%;
-      left: 4%;
-      color: #82ca20;
-      padding: 15px 31px 15px 29px;
-      border: 3px solid #82ca20;
-      transform: rotate(-3deg);
-      opacity: 0;
-    }
-
-    .no-text div,
-    .yes-text div {
-      background-size: contain;
-      width: 0.7em;
-      height: 0.7em;
-    }
-
-    .no-text div {
-      background-image: url("../img/arrow_left_256_82ca20.png");
-      float: left;
-      margin-right: 11px;
-    }
-
-    .yes-text div {
-      background-image: url("../img/arrow_right_256_ff002d.png");
-      float: right;
-      margin-left: 11px;
+      white-space: nowrap;
+      div {
+        background-size: contain;
+        width: 0.7em;
+        height: 0.7em;
+      }
     }
 
     .yes-text {
-      top: 29%;
+      top: 22%;
       right: 2%;
-      color: #ff002d;
+      color: #82ca20;
       padding: 16px 28px 16px 27px;
-      border: 3px solid #ff002d;
+      border: 3px solid #82ca20;
       transform: rotate(4deg);
+      div {
+        background-image: url("../img/arrow_right_256_82ca20.png");
+        float: right;
+        margin-left: 11px;
+      }
     }
+
+
+    .no-text {
+      top: 29%;
+      left: 4%;
+      color: #ff002d;
+      padding: 15px 31px 15px 29px;
+      border: 3px solid #ff002d;
+      transform: rotate(-3deg);
+      opacity: 0;
+      div {
+        background-image: url("../img/arrow_left_256_ff002d.png");
+        float: left;
+        margin-right: 11px;
+      }
+    }
+
 
     .tooltip{
       display: none;
