--- a/scss/partials/_forms.scss
+++ b/scss/partials/_forms.scss
@@ -28,6 +28,9 @@
       border-radius: 25px;
       font-size: 1em;
       input{
+        &[readonly]{
+          background-color: transparent;
+        }
         height: 100%;
         font-size: 1.05em;
         padding: 0px 10px 0px 0px;
@@ -79,4 +82,8 @@
       }
     }
   }
+}
+
+.popover.gender-popover{
+  height: 125px;
 }
