--- a/scss/partials/_photo_list.scss
+++ b/scss/partials/_photo_list.scss
@@ -59,7 +59,8 @@
         line-height: 1.2;
       }
       .numbers{
-        font-size: 0.8em;
+        white-space: nowrap;
+        font-size: 0.75em;
         height: 20px;
         line-height: 20px;
         margin-top: 5px;
