--- a/www/templates/cards.html
+++ b/www/templates/cards.html
@@ -17,8 +17,8 @@
           <div class="gradient gradient-top {{card.color}}"></div>
           <div class="gradient gradient-bottom"></div>
 
-          <div class="no-text">YAAY <div class="right-arrow"></div></div>
-          <div class="yes-text"><div class="left-arrow"></div> NAAY</div>
+          <div class="no-text">NAAY <div class="left-arrow"></div></div>
+          <div class="yes-text"><div class="right-arrow"></div> YAAY</div>
 
           <div class="info">
             <img class="circle avatar" ng-src="{{card.avatar}}" />
