--- a/www/templates/categories.html
+++ b/www/templates/categories.html
@@ -2,10 +2,7 @@
   <ion-nav-buttons side="left">
     <button class="button button-icon button-clear ion-ios-gear-outline"></button>
   </ion-nav-buttons>
-  <div class="bar bar-subheader page-categories">
-    YAAYs this week still 12 hours 21 seconds
-  </div>
-  <ion-content class="page page-categories has-subheader">
+  <ion-content class="page page-categories">
     <ul class="photo-list is-category">
       <li class="photo-list-item" ng-repeat="item in categories" ng-click="showPictures(item.id)">
         <div class="image" style="background-image: url({{item.image}});"></div>
