--- a/www/templates/complete-profile.html
+++ b/www/templates/complete-profile.html
@@ -19,19 +19,19 @@
       <div class="list list-inset form-skin1">
         <label class="item item-input">
           <input type="text" placeholder="Name" ng-model="data.name">
-          <i class="icon ion-ios-checkmark-empty checkmark" ng-show="data.name"></i>
+          <i class="icon ion-ios-checkmark-empty checkmark ng-hide" ng-show="data.name"></i>
         </label>
         <label class="item item-input">
-          <input type="text" placeholder="Gender" ng-model="data.gender">
-          <i class="icon ion-ios-checkmark-empty checkmark" ng-show="data.gender"></i>
+          <input type="text" placeholder="Gender" ng-model="data.gender" readonly="readonly" ng-click="genderPopover.show($event)">
+          <i class="icon ion-ios-checkmark-empty checkmark ng-hide" ng-show="data.gender"></i>
         </label>
         <label class="item item-input">
           <input type="text" placeholder="Birth Date" ng-model="data.birthday">
-          <i class="icon ion-ios-checkmark-empty checkmark" ng-show="data.birthday"></i>
+          <i class="icon ion-ios-checkmark-empty checkmark ng-hide" ng-show="data.birthday"></i>
         </label>
         <label class="item item-input">
-          <input type="text" placeholder="Code we sent by e-mail" ng-model="data.code">
-          <i class="icon ion-ios-checkmark-empty checkmark" ng-show="data.code"></i>
+          <input type="number" placeholder="Code we sent by e-mail" ng-model="data.code">
+          <i class="icon ion-ios-checkmark-empty checkmark ng-hide" ng-show="data.code"></i>
         </label>
         <div class="item item-error">
           THIS IS AN example of an error MESSAGE*
@@ -43,3 +43,14 @@
     
   </ion-content>
 </ion-view>
+
+<script id="gender-popover" type="text/ng-template">
+  <ion-popover-view class="gender-popover">
+    <ion-content>
+      <div class="list">
+        <a ng-click="onSelectGender('Male', $event)" class="item">Male</a>
+        <a ng-click="onSelectGender('Female', $event)" class="item">Female</a>
+      </div>
+    </ion-content>
+  </ion-popover-view>
+</script>
