--- a/www/templates/forgot-password-code.html
+++ b/www/templates/forgot-password-code.html
@@ -1,5 +1,5 @@
 <ion-view view-title="Forgot Password" hide-nav-bar="true">
-  <ion-content class="page page-forgot-password-code">
+  <ion-content class="page page-forgot-password-code" scroll="false">
     <a href="#/forgot-password" class="back-link"><i class="icon ion-ios-arrow-thin-left"></i></a>
     
     <h2>YAAY or NAAY?</h2>
@@ -12,7 +12,7 @@
     <form>
       <div class="list list-inset form-skin1">
         <label class="item item-input">
-          <input type="text" placeholder="Code we sent by e-mail">
+          <input type="number" placeholder="Code we sent by e-mail">
         </label>
         
         <div class="padding-line"></div>
@@ -20,7 +20,7 @@
         <label class="item item-input">
           <input type="password" placeholder="New Password">
         </label>
-        <a class="button button-transparent" href="#/forgot-password-code">Change Password</a>
+        <a class="button button-transparent" href="#/login">Change Password</a>
         <div class="item item-error">
           THIS IS AN example of an error MESSAGE*
         </div>
