--- a/www/templates/forgot-password.html
+++ b/www/templates/forgot-password.html
@@ -1,5 +1,5 @@
 <ion-view view-title="Forgot Password" hide-nav-bar="true">
-  <ion-content class="page page-forgot-password">
+  <ion-content class="page page-forgot-password" scroll="false">
     <a href="#/login" class="back-link"><i class="icon ion-ios-arrow-thin-left"></i></a>
     
     <h2>YAAY or NAAY?</h2>
@@ -13,7 +13,7 @@
       <div class="list list-inset form-skin1">
         <label class="item item-input with-placeholder-icon">
           <i class="icon ion-ios-email-outline placeholder-icon"></i>
-          <input type="text" placeholder="Email Address">
+          <input type="email" placeholder="Email Address">
         </label>
         <a class="button button-transparent" href="#/forgot-password-code">Get Code</a>
         <div class="item item-error">
