--- a/scss/pages/_login_register.scss
+++ b/scss/pages/_login_register.scss
@@ -110,16 +110,25 @@
       margin-top: 70px;
       margin-bottom: 40px;
     }
+    .button{
+      @include iphone5-and-lower{
+        margin-bottom: 5px;
+      }
+    }
     .forgot-password{
       text-align: center;
       text-transform: uppercase;
       font-size: 0.8em;
       letter-spacing: 2px;
+      a{
+        display: inline-block;
+        padding: 5px 10px;
+      }
     }
     .login-tip{
-      margin-top: 70px;
+      margin-top: 50px;
       @include iphone5-and-lower{
-        margin-top: 30px;
+        margin-top: 25px;
       }
     }
   }
