--- a/scss/partials/_navbar.scss
+++ b/scss/partials/_navbar.scss
@@ -1,17 +1,31 @@
 .nav-bar-block{
   .bar.bar-stable{
+    height: 35px;
+    padding-top: 0px;
+    padding-bottom: 0px;
+    background-color: #ffffff;
+    background-image: none!important;
     .button.button-icon{
       &:before{
-        font-size: 28px;
+        font-size: 25px;
       }
     }
-    .button.back-button .back-text{
-      display: none;
-    }
+    .button.back-button{
+      .icon.ion-ios-arrow-thin-left:before{
+/*        font-size: 35px;*/
+      }
+      .back-text{
+        display: none;
+      }
+    } 
     .title{
-      font-size: 23px;
+      font-size: 1.3em;
       font-family: 'OpenSans-Bold';
       color: #26292e;
+      line-height: 35px;
     }
   }
+}
+ion-content.has-header{
+  top: 35px;
 }
