--- a/www/css/style.css
+++ b/www/css/style.css
@@ -137,14 +137,26 @@ ng-form {
 .page {
   background-color: #ffffff; }
 
-.nav-bar-block .bar.bar-stable .button.button-icon:before {
-  font-size: 28px; }
-.nav-bar-block .bar.bar-stable .button.back-button .back-text {
-  display: none; }
-.nav-bar-block .bar.bar-stable .title {
-  font-size: 23px;
-  font-family: 'OpenSans-Bold';
-  color: #26292e; }
+.nav-bar-block .bar.bar-stable {
+  height: 35px;
+  padding-top: 0px;
+  padding-bottom: 0px;
+  background-color: #ffffff;
+  background-image: none !important; }
+  .nav-bar-block .bar.bar-stable .button.button-icon:before {
+    font-size: 25px; }
+  .nav-bar-block .bar.bar-stable .button.back-button .icon.ion-ios-arrow-thin-left:before {
+    /*        font-size: 35px;*/ }
+  .nav-bar-block .bar.bar-stable .button.back-button .back-text {
+    display: none; }
+  .nav-bar-block .bar.bar-stable .title {
+    font-size: 1.3em;
+    font-family: 'OpenSans-Bold';
+    color: #26292e;
+    line-height: 35px; }
+
+ion-content.has-header {
+  top: 35px; }
 
 .menu.menu-left {
   background-color: #444444;
@@ -191,6 +203,8 @@ ng-form {
         font-size: 1.05em;
         padding: 0px 10px 0px 0px;
         line-height: 1; }
+        .list.form-skin1 .item.item-input input[readonly] {
+          background-color: transparent; }
         .list.form-skin1 .item.item-input input::-webkit-input-placeholder {
           padding-top: 2px;
           color: #ac9d9e; }
@@ -229,6 +243,9 @@ ng-form {
           height: 40px;
           border-radius: 20px; } }
 
+.popover.gender-popover {
+  height: 125px; }
+
 .page .button {
   height: 50px;
   line-height: 46px;
@@ -261,6 +278,9 @@ ng-form {
     color: #fff; }
   .page .button:active {
     background-color: transparent; }
+
+.camera-button:active {
+  background-color: #a1a1a1 !important; }
 
 .cup {
   background: url(../img/cup_placeholder.png) left bottom no-repeat;
@@ -348,7 +368,8 @@ ng-form {
         font-size: 1.2em;
         line-height: 1.2; }
       .photo-list .photo-list-item .text-wrapper .numbers {
-        font-size: 0.8em;
+        white-space: nowrap;
+        font-size: 0.75em;
         height: 20px;
         line-height: 20px;
         margin-top: 5px; }
@@ -450,25 +471,24 @@ ng-form {
     text-align: center;
     padding: 20px 0px 10px 0px; }
   .modal.capture-modal .completed .bottom-bar .buttons.social {
-    display: flex;
-    display: -webkit-flex;
-    align-items: center;
-    -webkit-align-items: center;
-    justify-content: center;
-    position: relative; }
+    position: relative;
+    text-align: center; }
     .modal.capture-modal .completed .bottom-bar .buttons.social .apply-button {
       position: absolute;
       right: 20px;
-      top: 5px; }
+      top: 0px; }
   .modal.capture-modal .completed .bottom-bar .social .circle {
     border-radius: 50%;
     width: 3em;
     height: 3em;
     color: #ffffff;
-    display: flex;
-    display: -webkit-flex;
-    align-items: center;
-    -webkit-align-items: center; }
+    /*        display: flex;
+        display: -webkit-flex;
+        align-items: center;
+        -webkit-align-items: center;*/
+    display: inline-block;
+    line-height: 3em;
+    text-align: center; }
     .modal.capture-modal .completed .bottom-bar .social .circle.whatsapp {
       background: #82ca20;
       margin-right: 0.65em; }
@@ -573,16 +593,22 @@ ng-form {
   .page-start.page-login .description, .page-login.page-login .description, .page-complete-profile.page-login .description, .page-forgot-password.page-login .description, .page-forgot-password-code.page-login .description {
     margin-top: 70px;
     margin-bottom: 40px; }
+  @media only screen and (max-width: 320px) {
+    .page-start.page-login .button, .page-login.page-login .button, .page-complete-profile.page-login .button, .page-forgot-password.page-login .button, .page-forgot-password-code.page-login .button {
+      margin-bottom: 5px; } }
   .page-start.page-login .forgot-password, .page-login.page-login .forgot-password, .page-complete-profile.page-login .forgot-password, .page-forgot-password.page-login .forgot-password, .page-forgot-password-code.page-login .forgot-password {
     text-align: center;
     text-transform: uppercase;
     font-size: 0.8em;
     letter-spacing: 2px; }
+    .page-start.page-login .forgot-password a, .page-login.page-login .forgot-password a, .page-complete-profile.page-login .forgot-password a, .page-forgot-password.page-login .forgot-password a, .page-forgot-password-code.page-login .forgot-password a {
+      display: inline-block;
+      padding: 5px 10px; }
   .page-start.page-login .login-tip, .page-login.page-login .login-tip, .page-complete-profile.page-login .login-tip, .page-forgot-password.page-login .login-tip, .page-forgot-password-code.page-login .login-tip {
-    margin-top: 70px; }
+    margin-top: 50px; }
     @media only screen and (max-width: 320px) {
       .page-start.page-login .login-tip, .page-login.page-login .login-tip, .page-complete-profile.page-login .login-tip, .page-forgot-password.page-login .login-tip, .page-forgot-password-code.page-login .login-tip {
-        margin-top: 30px; } }
+        margin-top: 25px; } }
   .page-start.page-complete-profile h2, .page-login.page-complete-profile h2, .page-complete-profile.page-complete-profile h2, .page-forgot-password.page-complete-profile h2, .page-forgot-password-code.page-complete-profile h2 {
     margin-top: 0px; }
     @media only screen and (min-width: 414px) {
@@ -827,7 +853,7 @@ ng-form {
     width: 97%;
     margin-top: 16px;
     /*      -webkit-transition: margin 0.1s, width 0.1s;
-      transition: margin 0.1s, width 0.1s;*/ }
+            transition: margin 0.1s, width 0.1s;*/ }
   .page-cards.page td-card.card-1 {
     margin-left: -46.2%;
     width: 92.2%;
@@ -848,11 +874,12 @@ ng-form {
     font-weight: 400;
     bottom: 21px;
     right: 10px;
-    color: #ccc; }
+    color: #ccc;
+    white-space: nowrap; }
   .page-cards.page td-card .info {
     position: absolute;
     top: 0;
-    padding: 12px 7px 0 17px;
+    padding: 12px 7px 0 10px;
     width: 100%; }
   .page-cards.page td-card .info, .page-cards.page td-card .comment, .page-cards.page td-card .gradient {
     opacity: 1; }
@@ -869,8 +896,9 @@ ng-form {
   .page-cards.page td-card .info .user-info .name {
     font-size: 1.05em; }
   .page-cards.page td-card .info .user-info .counters {
-    font-size: 0.7em;
-    padding-top: 0.15em; }
+    font-size: 0.68em;
+    padding-top: 0.15em;
+    white-space: nowrap; }
   .page-cards.page .counters .space-right {
     padding-right: 0.55em; }
   .page-cards.page td-card.card-2 .counters .space-right {
@@ -941,34 +969,35 @@ ng-form {
     border-radius: 7px;
     font-weight: 600;
     opacity: 0;
-    background: rgba(255, 255, 255, 0.5); }
-  .page-cards.page .no-text {
+    background: rgba(255, 255, 255, 0.5);
+    white-space: nowrap; }
+    .page-cards.page .yes-text div, .page-cards.page .no-text div {
+      background-size: contain;
+      width: 0.7em;
+      height: 0.7em; }
+  .page-cards.page .yes-text {
     top: 22%;
-    left: 4%;
+    right: 2%;
     color: #82ca20;
-    padding: 15px 31px 15px 29px;
+    padding: 16px 28px 16px 27px;
     border: 3px solid #82ca20;
+    transform: rotate(4deg); }
+    .page-cards.page .yes-text div {
+      background-image: url("../img/arrow_right_256_82ca20.png");
+      float: right;
+      margin-left: 11px; }
+  .page-cards.page .no-text {
+    top: 29%;
+    left: 4%;
+    color: #ff002d;
+    padding: 15px 31px 15px 29px;
+    border: 3px solid #ff002d;
     transform: rotate(-3deg);
     opacity: 0; }
-  .page-cards.page .no-text div, .page-cards.page .yes-text div {
-    background-size: contain;
-    width: 0.7em;
-    height: 0.7em; }
-  .page-cards.page .no-text div {
-    background-image: url("../img/arrow_left_256_82ca20.png");
-    float: left;
-    margin-right: 11px; }
-  .page-cards.page .yes-text div {
-    background-image: url("../img/arrow_right_256_ff002d.png");
-    float: right;
-    margin-left: 11px; }
-  .page-cards.page .yes-text {
-    top: 29%;
-    right: 2%;
-    color: #ff002d;
-    padding: 16px 28px 16px 27px;
-    border: 3px solid #ff002d;
-    transform: rotate(4deg); }
+    .page-cards.page .no-text div {
+      background-image: url("../img/arrow_left_256_ff002d.png");
+      float: left;
+      margin-right: 11px; }
   .page-cards.page .tooltip {
     display: none;
     position: absolute;
