--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -1,7 +1,7 @@
 <ion-side-menus enable-menu-with-back-views="false">
   <ion-side-menu-content drag-content="false">
     <ion-nav-bar class="bar-stable" align-title="center">
-      <ion-nav-back-button class="button-clear"><i class="icon ion-arrow-left-c"></i> </ion-nav-back-button>
+      <ion-nav-back-button class="button-clear"><i class="icon ion-ios-arrow-thin-left"></i> </ion-nav-back-button>
     </ion-nav-bar>
     <ion-nav-view name="menuContent"></ion-nav-view>
   </ion-side-menu-content>
