--- a/www/templates/start.html
+++ b/www/templates/start.html
@@ -1,5 +1,5 @@
 <ion-view view-title="App Start" hide-nav-bar="true">
-  <ion-content class="page page-start">
+  <ion-content class="page page-start" scroll="false">
     <div class="logo">
       <img src="img/logo.png">
       <h3>YAAY or NAAY?</h3>
