--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -1,5 +1,5 @@
 <ion-view view-title="Login with email" hide-nav-bar="true">
-  <ion-content class="page page-login" scroll="false">
+  <ion-content class="page page-login">
     <a href="#/start" class="back-link"><i class="icon ion-ios-arrow-thin-left"></i></a>
     
     <h2>YAAY or NAAY?</h2>
