--- a/scss/pages/_cards.scss
+++ b/scss/pages/_cards.scss
@@ -7,10 +7,6 @@
     text-overflow: ellipsis;
   }
 
-  .circle {
-    border-radius: 50%;
-  }
-
   &.page{
     bottom: 70px;
     @include iphone5-and-lower{
@@ -120,59 +116,50 @@
       opacity: 1;
     }
 
-    td-card .info .avatar {
-      border: 2px solid #ffffff;
-      width: 42px;
-      float: left;
-
-    }
-
-    td-card .info img.avatar {
-      opacity: 1;
-    }
-
-    td-card .info .user-info {
-      padding-left: 8px;
-      float: left;
-      color: #ffffff;
-    }
-
-    td-card .info .user-info .name {
-      font-size: 1.05em;
-    }
-
-    td-card .info .user-info .counters {
-      font-size: 0.68em;
-      padding-top: 0.15em;
-      white-space: nowrap;
-    }
-
-    .counters .space-right {
-      padding-right: 0.55em;
-    }
-
-    td-card.card-2 .counters .space-right {
-      padding-right: 5px;
-    }
-
-    td-card .info .follow-button {
-      font-size: 0.85em;
-      float: right;
-      border-radius: 25px;
-      color: #ffffff;
-      padding: 9px 15px;
-      height: auto;
-      line-height: 1;
-      letter-spacing: 0px;
-      &.followed{
-        background-color: #fff;
-        color: #000;
+    td-card .info{
+      .avatar {
+        border: 2px solid #ffffff;
+        width: 42px;
+        float: left;
+      }
+      img.avatar {
+        opacity: 1;
+      }
+      .user-info {
+        padding-left: 8px;
+        float: left;
+        color: #ffffff;
+      }
+      .name {
+        font-size: 1.05em;
+      }
+      .counters {
+        font-size: 0.68em;
+        padding-top: 0.15em;
+        white-space: nowrap;
+        .space-right {
+          padding-right: 5px;
+        }
+      }
+      .follow-button {
+        font-size: 0.85em;
+        float: right;
+        border-radius: 25px;
+        color: #ffffff;
+        padding: 9px 15px;
+        height: auto;
+        line-height: 1;
+        letter-spacing: 0px;
+        &.followed{
+          background-color: #fff;
+          color: #000;
+        }
+        &:active {
+          opacity: 0.5;
+        }
       }
     }
 
-    td-card .info .follow-button:active {
-      opacity: 0.5;
-    }
 
     td-card .comment {
       position: absolute;
@@ -190,12 +177,10 @@
       position: absolute;
       width: 100%;
       height: 200px;
-
     }
 
     td-card .gradient-top {
       top: 0;
-
       @include vertical-gradient($category-gradient-grey-end, $category-gradient-grey-start);
       &.pink{
         @include vertical-gradient($category-gradient-pink-end, $category-gradient-pink-start);
