--- a/www/templates/upload-categories.html
+++ b/www/templates/upload-categories.html
@@ -1,6 +1,6 @@
 <ion-view view-title="Upload" hide-back-button="true">
   <ion-nav-buttons side="left">
-    <button class="button button-icon button-clear ion-ios-close-outline" ng-click="goBack()"></button>
+    <button class="button button-icon button-clear ion-ios-close-empty" ng-click="goBack()"></button>
   </ion-nav-buttons>
   <div class="bar bar-subheader page-upload-categories">
     Please choose the category you want to upload your pic(s) and ask for YAAYs:
