--- a/scss/partials/_capture_modal.scss
+++ b/scss/partials/_capture_modal.scss
@@ -17,6 +17,19 @@
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
+    .gradient {
+      position: absolute;
+      width: 100%;
+      height: 55%;
+      &.gradient-top {
+        top: 0;
+        @include vertical-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0));
+      }
+      &.gradient-bottom {
+        bottom: 0;
+        @include vertical-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5));
+      }
+    }
   }
 
   .bottom-bar{
