--- a/www/templates/categories.html
+++ b/www/templates/categories.html
@@ -21,16 +21,16 @@
     </ul><!-- photo-list-->
   </ion-content>
   <ion-footer-bar class="page-categories">
-    <div class="left-area">
+    <a class="left-area" href="#/myresults">
       <cup type="'bronze'" fill="0.9"></cup>
       YAAYs: <span>8,032</span>
-    </div>
+    </a>
     <button class="camera-button">
       <input type="file" id="profile_photo_r" onchange="onCategoryPhotoSelected(this)" accept="image/*">
       <i class="icon ion-ios-camera-outline"></i>
     </button>
-    <div class="right-area">
+    <a class="right-area" href="#/myresults">
       Followers: <span>1,032</span>
-    </div>
+    </a>
   </ion-footer-bar>
 </ion-view>
