--- a/www/css/style.css
+++ b/www/css/style.css
@@ -146,6 +146,9 @@ ng-form {
   padding-bottom: 0px;
   background-color: #ffffff;
   background-image: none !important; }
+  .nav-bar-block .bar.bar-stable .button {
+    line-height: 24px;
+    min-height: 25px; }
   .nav-bar-block .bar.bar-stable .button.button-icon:before {
     font-size: 25px; }
   .nav-bar-block .bar.bar-stable .button.button-icon.ion-ios-close-empty:before {
@@ -158,7 +161,8 @@ ng-form {
     font-size: 1.3em;
     font-family: 'OpenSans-Bold';
     color: #26292e;
-    line-height: 35px; }
+    line-height: 35px;
+    height: 35px; }
 
 .has-header {
   top: 35px; }
@@ -1248,3 +1252,77 @@ ng-form {
     .page-profile .info .button.follow-button.followed {
       opacity: 0.7;
       background-color: #ccc; }
+
+.page-myresults h3 {
+  text-transform: uppercase;
+  font-size: 1.1em;
+  text-align: center;
+  margin-bottom: 0.5em; }
+.page-myresults .states {
+  margin-top: 1.8em;
+  text-align: center; }
+  .page-myresults .states .counters > div {
+    display: inline-block;
+    font-size: 1.1em; }
+    .page-myresults .states .counters > div label {
+      font-family: 'OpenSans-Bold';
+      font-size: inherit; }
+    .page-myresults .states .counters > div.left-space {
+      padding-right: 16px; }
+    .page-myresults .states .counters > div.right-space {
+      padding-left: 16px; }
+  .page-myresults .states .cups {
+    margin: 1.5em 0; }
+    .page-myresults .states .cups .cup-item {
+      display: inline-block;
+      margin: 0px 15px; }
+      .page-myresults .states .cups .cup-item.bronze {
+        color: #ae6643; }
+      .page-myresults .states .cups .cup-item.silver {
+        color: #909090; }
+      .page-myresults .states .cups .cup-item.gold {
+        color: #d49a00; }
+      .page-myresults .states .cups .cup-item .cup {
+        margin-top: 3px;
+        height: 60px;
+        width: 57px; }
+  .page-myresults .states .rankings p {
+    color: #585858;
+    margin-bottom: 0.5em; }
+.page-myresults .week-item h3 {
+  line-height: 1;
+  margin: 0.5em 0px; }
+.page-myresults .week-item .photo-list-item .btn {
+  position: absolute;
+  top: 10px;
+  width: 3em;
+  height: 3em;
+  color: #ffffff;
+  display: flex;
+  display: -webkit-flex;
+  align-items: center;
+  -webkit-align-items: center; }
+  .page-myresults .week-item .photo-list-item .btn:active {
+    opacity: 0.7; }
+  .page-myresults .week-item .photo-list-item .btn.yaays {
+    background: rgba(0, 0, 0, 0.5);
+    left: 10px; }
+    .page-myresults .week-item .photo-list-item .btn.yaays > div {
+      display: block;
+      line-height: 1;
+      text-align: center;
+      font-size: 0.7em;
+      width: 100%; }
+      .page-myresults .week-item .photo-list-item .btn.yaays > div strong {
+        font-size: 1.2em; }
+  .page-myresults .week-item .photo-list-item .btn.whatsapp {
+    background: #82ca20;
+    left: 50%;
+    margin-left: -1.5em; }
+  .page-myresults .week-item .photo-list-item .btn.facebook {
+    background: #43609c;
+    right: 10px; }
+  .page-myresults .week-item .photo-list-item .btn .icon {
+    margin: auto;
+    font-size: 1.6em;
+    text-align: center; }
